--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id='root'>
 	    </div>
 
-        <script src="/static/bundle.js"></script>
+        <script src="/bundle.js"></script>
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
             window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
